--- a/src/pages/blog/[...page].astro
+++ b/src/pages/blog/[...page].astro
@@ -38,6 +38,7 @@ function formatDate(date: Date): string {
         <a href="/" class="active">文章</a>
         <a href="/tags">分类</a>
         <a href="/about">关于</a>
+        <button class="theme-toggle" aria-label="切换主题"></button>
       </nav>
     </header>
 
